--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/09/17, 2019/09/10, Roao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again.">
+  <meta name="description" content="2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Roao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/09/17, 2019/09/10, Roao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019. 2019/07/16, Shaolin Wang, practice on GECCO presentation again."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Roao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions. 2019/07/30, Whole Group, discussions about lexicase selection in GP. 2019/07/23, Whole Group, share experience in GECCO2019."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,7 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2019/09/17,</li>
+<li>2019/09/17, Sven Hartmann, NP-completeness and NP-hardness.</li>
 <li>2019/09/10, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Roao Costa</a></strong>, VRP with drones.</li>
 <li>2019/09/03, <strong><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></strong>, internet congestion control by deep reinforcement learning.</li>
 <li>2019/08/27, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>,</li>
