--- a/publication/index.html
+++ b/publication/index.html
@@ -887,6 +887,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/978-3-030-29894-4_37" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -980,6 +984,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/978-3-030-29908-8_16" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1072,6 +1080,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/CLOUD.2019.00078" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
