--- a/publication/tan-2019-novel/index.html
+++ b/publication/tan-2019-novel/index.html
@@ -578,6 +578,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1109/CLOUD.2019.00078" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
