--- a/index.html
+++ b/index.html
@@ -2071,6 +2071,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/978-3-030-29908-8_16" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
@@ -2196,6 +2200,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1007/978-3-030-29894-4_37" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 
