--- a/publication/ardeh-2019-novel/index.html
+++ b/publication/ardeh-2019-novel/index.html
@@ -578,6 +578,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1007/978-3-030-29908-8_16" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
