--- a/index.html
+++ b/index.html
@@ -2063,6 +2063,18 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
 
 
 
