--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,15 +18,15 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2019novel">1</a>]
+[<a name="wang2019evolving">1</a>]
 </td>
 <td class="bibtexitem">
-Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
- A novel genetic programming algorithm with knowledge transfer for
-  uncertain capacitated arc routing.
- In <em>Proceedings of Pacific-Rim International Conference on
-  Artificial Intelligence (PRICAI)</em>. IEEE, aug 2019.
-[&nbsp;<a href="publication-accepted_bib.html#ardeh2019novel">bib</a>&nbsp;| 
+Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
+ Evolving ensembles of routing policies using genetic programming for
+  uncertain capacitated arc routing problem.
+ In <em>Proceedings of IEEE Symposium Series on Computational
+  Intelligence (IEEE SSCI)</em>. IEEE, dec 2019.
+[&nbsp;<a href="publication-accepted_bib.html#wang2019evolving">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
 </td>
@@ -35,15 +35,15 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="abdollahi2019stratifying">2</a>]
+[<a name="wang2019two">2</a>]
 </td>
 <td class="bibtexitem">
-Mahdi Abdollahi, Xiaoying Gao, Yi&nbsp;Mei, Shameek Ghosh, and Jinyan Li.
- Stratifying risk of coronary artery disease using discriminative
-  knowledge-guided medical concept pairings from clinical notes.
- In <em>Proceedings of Pacific-Rim International Conference on
-  Artificial Intelligence (PRICAI)</em>. IEEE, aug 2019.
-[&nbsp;<a href="publication-accepted_bib.html#abdollahi2019stratifying">bib</a>&nbsp;| 
+Shaolin Wang, Yi&nbsp;Mei, John Park, and Mengjie Zhang.
+ A two-stage genetic programming hyper-heuristic for uncertain
+  capacitated arc routing problem.
+ In <em>Proceedings of IEEE Symposium Series on Computational
+  Intelligence (IEEE SSCI)</em>. IEEE, dec 2019.
+[&nbsp;<a href="publication-accepted_bib.html#wang2019two">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
 </td>
@@ -52,14 +52,49 @@ Mahdi Abdollahi, Xiaoying Gao, Yi&nbsp;Mei, Shameek Ghosh, and Jinyan Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2019novel">3</a>]
+[<a name="karunakaran2019novel">3</a>]
 </td>
 <td class="bibtexitem">
-Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
- Novel genetic algorithm with dual chromosome representation for
-  resource allocation in container-based clouds.
- In <em>Proceedings of the IEEE CLOUD</em>. IEEE, jul 2019.
-[&nbsp;<a href="publication-accepted_bib.html#tan2019novel">bib</a>&nbsp;| 
+Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
+ Multitasking genetic programming for stochastic team orienteering
+  problem with time windows.
+ In <em>Proceedings of IEEE Symposium Series on Computational
+  Intelligence (IEEE SSCI)</em>. IEEE, dec 2019.
+[&nbsp;<a href="publication-accepted_bib.html#karunakaran2019novel">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="karunakaran2019multitasking">4</a>]
+</td>
+<td class="bibtexitem">
+Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
+ Multitasking genetic programming for stochastic team orienteering
+  problem with time windows.
+ In <em>Proceedings of IEEE Symposium Series on Computational
+  Intelligence (IEEE SSCI)</em>. IEEE, dec 2019.
+[&nbsp;<a href="publication-accepted_bib.html#karunakaran2019multitasking">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="masood2019genetic">5</a>]
+</td>
+<td class="bibtexitem">
+Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
+ Genetic programming with pareto local search for many-objective job
+  shop scheduling.
+ In <em>Proceedings of the Australasian Joint Conference on
+  Artificial Intelligence (AI)</em>. Springer, dec 2019.
+[&nbsp;<a href="publication-accepted_bib.html#masood2019genetic">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
 </td>
