--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,41 +7,67 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="ardeh2019novel"></a><pre>
-@inproceedings{<a href="publication-accepted.html#ardeh2019novel">ardeh2019novel</a>,
-  title = {A Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing},
-  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
-  booktitle = {Proceedings of Pacific-Rim International Conference on Artificial Intelligence (PRICAI)},
+<h1>publication-accepted.bib</h1><a name="wang2019evolving"></a><pre>
+@inproceedings{<a href="publication-accepted.html#wang2019evolving">wang2019evolving</a>,
+  title = {Evolving Ensembles of Routing Policies using Genetic Programming for Uncertain Capacitated Arc Routing Problem},
+  author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
+  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (IEEE SSCI)},
   pages = {},
   year = {2019},
-  month = {aug},
+  month = {dec},
   organization = {IEEE},
   doi = {}
 }
 </pre>
 
-<a name="abdollahi2019stratifying"></a><pre>
-@inproceedings{<a href="publication-accepted.html#abdollahi2019stratifying">abdollahi2019stratifying</a>,
-  title = {Stratifying risk of coronary artery disease using discriminative knowledge-guided medical concept pairings from clinical notes},
-  author = {Abdollahi, Mahdi and Gao, Xiaoying and Mei, Yi and Ghosh, Shameek and Li, Jinyan},
-  booktitle = {Proceedings of Pacific-Rim International Conference on Artificial Intelligence (PRICAI)},
+<a name="wang2019two"></a><pre>
+@inproceedings{<a href="publication-accepted.html#wang2019two">wang2019two</a>,
+  title = {A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem},
+  author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
+  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (IEEE SSCI)},
   pages = {},
   year = {2019},
-  month = {aug},
+  month = {dec},
   organization = {IEEE},
   doi = {}
 }
 </pre>
 
-<a name="tan2019novel"></a><pre>
-@inproceedings{<a href="publication-accepted.html#tan2019novel">tan2019novel</a>,
-  title = {Novel Genetic Algorithm with Dual Chromosome Representation for Resource Allocation in Container-based Clouds},
-  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
-  booktitle = {Proceedings of the IEEE CLOUD},
+<a name="karunakaran2019novel"></a><pre>
+@inproceedings{<a href="publication-accepted.html#karunakaran2019novel">karunakaran2019novel</a>,
+  title = {Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows},
+  author = {Karunakaran, Deepak and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (IEEE SSCI)},
   pages = {},
   year = {2019},
-  month = {jul},
+  month = {dec},
   organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="karunakaran2019multitasking"></a><pre>
+@inproceedings{<a href="publication-accepted.html#karunakaran2019multitasking">karunakaran2019multitasking</a>,
+  title = {Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows},
+  author = {Karunakaran, Deepak and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (IEEE SSCI)},
+  pages = {},
+  year = {2019},
+  month = {dec},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="masood2019genetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#masood2019genetic">masood2019genetic</a>,
+  title = {Genetic Programming with Pareto Local Search for Many-Objective Job Shop Scheduling},
+  author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
+  booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
+  pages = {},
+  year = {2019},
+  month = {dec},
+  organization = {Springer},
   doi = {}
 }
 </pre>
