--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,24 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2019novel">1</a>]
+[<a name="masood2019genetic">1</a>]
+</td>
+<td class="bibtexitem">
+Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
+ Genetic programming with pareto local search for many-objective job
+  shop scheduling.
+ In <em>Proceedings of the Australasian Joint Conference on
+  Artificial Intelligence (AI)</em>. Springer, dec 2019.
+[&nbsp;<a href="publication-accepted_bib.html#masood2019genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="ardeh2019novel">2</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -35,7 +52,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="abdollahi2019stratifying">2</a>]
+[<a name="abdollahi2019stratifying">3</a>]
 </td>
 <td class="bibtexitem">
 Mahdi Abdollahi, Xiaoying Gao, Yi&nbsp;Mei, Shameek Ghosh, and Jinyan Li.
@@ -52,7 +69,7 @@ Mahdi Abdollahi, Xiaoying Gao, Yi&nbsp;Mei, Shameek Ghosh, and Jinyan Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2019novel">3</a>]
+[<a name="tan2019novel">4</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
