--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,20 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="ardeh2019novel"></a><pre>
+<h1>publication-accepted.bib</h1><a name="masood2019genetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#masood2019genetic">masood2019genetic</a>,
+  title = {Genetic Programming with Pareto Local Search for Many-Objective Job Shop Scheduling},
+  author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
+  booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
+  pages = {},
+  year = {2019},
+  month = {dec},
+  organization = {Springer},
+  doi = {}
+}
+</pre>
+
+<a name="ardeh2019novel"></a><pre>
 @inproceedings{<a href="publication-accepted.html#ardeh2019novel">ardeh2019novel</a>,
   title = {A Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing},
   author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
