--- a/404.html
+++ b/404.html
@@ -398,6 +398,10 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/ardehce-2019-novel/">Avwevw Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/abdollahi-2019-stratifying/">Stratifying risk of coronary artery disease using discriminative knowledge-guided medical concept pairings from clinical notes</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/ardeh-2019-genetic/">Genetic Programming Hyper-Heuristic with Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/wang-2019-novel/">Novel Ensemble Genetic Programming Hyper-Heuristics for Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
   
