--- a/404.html
+++ b/404.html
@@ -398,10 +398,6 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/karunakaran-2019-multitasking/">Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="/publication/ardeh-2019-novel/">A Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing</a></li>
   </ul>
   
@@ -411,6 +407,10 @@
   
   <ul>
     <li><a href="/publication/zhang-2019-two/">A Two-Stage Genetic Programming Hyper-heuristic Approach with Feature Selection for Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/ardeh-2019-genetic/">Genetic Programming Hyper-Heuristic with Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
   
