--- a/404.html
+++ b/404.html
@@ -394,23 +394,23 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/wang-2019-two/">A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/wang-2019-evolving/">Evolving Ensembles of Routing Policies using Genetic Programming for Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/masood-2019-genetic/">Genetic Programming with Pareto Local Search for Many-Objective Job Shop Scheduling</a></li>
   </ul>
   
   <ul>
+    <li><a href="/publication/karunakaran-2019-multitasking/">Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/ardeh-2019-novel/">A Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/abdollahi-2019-stratifying/">Stratifying risk of coronary artery disease using discriminative knowledge-guided medical concept pairings from clinical notes</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2019-two/">A Two-Stage Genetic Programming Hyper-heuristic Approach with Feature Selection for Dynamic Flexible Job Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/ardeh-2019-genetic/">Genetic Programming Hyper-Heuristic with Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
   
