--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,75 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2019novel">1</a>]
+[<a name="wang2019two">1</a>]
+</td>
+<td class="bibtexitem">
+Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
+ A two-stage genetic programming hyper-heuristic for uncertain
+  capacitated arc routing problem.
+ In <em>Proceedings of IEEE Symposium Series on Computational
+  Intelligence (SSCI)</em>. IEEE, sep 2019.
+[&nbsp;<a href="publication-accepted_bib.html#wang2019two">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="wang2019evolving">2</a>]
+</td>
+<td class="bibtexitem">
+Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
+ Evolving ensembles of routing policies using genetic programming for
+  uncertain capacitated arc routing problem.
+ In <em>Proceedings of IEEE Symposium Series on Computational
+  Intelligence (SSCI)</em>. IEEE, sep 2019.
+[&nbsp;<a href="publication-accepted_bib.html#wang2019evolving">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="karunakaran2019multitasking">3</a>]
+</td>
+<td class="bibtexitem">
+Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
+ Multitasking genetic programming for stochastic team orienteering
+  problem with time windows.
+ In <em>Proceedings of IEEE Symposium Series on Computational
+  Intelligence (SSCI)</em>. IEEE, sep 2019.
+[&nbsp;<a href="publication-accepted_bib.html#karunakaran2019multitasking">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="masood2019genetic">4</a>]
+</td>
+<td class="bibtexitem">
+Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
+ Genetic programming with pareto local search for many-objective job
+  shop scheduling.
+ In <em>Proceedings of the Australasian Joint Conference on
+  Artificial Intelligence (AI)</em>. Springer, sep 2019.
+[&nbsp;<a href="publication-accepted_bib.html#masood2019genetic">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="ardeh2019novel">5</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -35,7 +103,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="abdollahi2019stratifying">2</a>]
+[<a name="abdollahi2019stratifying">6</a>]
 </td>
 <td class="bibtexitem">
 Mahdi Abdollahi, Xiaoying Gao, Yi&nbsp;Mei, Shameek Ghosh, and Jinyan Li.
@@ -52,7 +120,7 @@ Mahdi Abdollahi, Xiaoying Gao, Yi&nbsp;Mei, Shameek Ghosh, and Jinyan Li.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2019novel">3</a>]
+[<a name="tan2019novel">7</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
