--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,59 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="ardeh2019novel"></a><pre>
+<h1>publication-accepted.bib</h1><a name="wang2019two"></a><pre>
+@inproceedings{<a href="publication-accepted.html#wang2019two">wang2019two</a>,
+  title = {A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem},
+  author = {Wang, Shaolin and Mei, Yi and Park John and Zhang, Mengjie},
+  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
+  pages = {},
+  year = {2019},
+  month = {sep},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="wang2019evolving"></a><pre>
+@inproceedings{<a href="publication-accepted.html#wang2019evolving">wang2019evolving</a>,
+  title = {Evolving Ensembles of Routing Policies using Genetic Programming for Uncertain Capacitated Arc Routing Problem},
+  author = {Wang, Shaolin and Mei, Yi and Park John and Zhang, Mengjie},
+  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
+  pages = {},
+  year = {2019},
+  month = {sep},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="karunakaran2019multitasking"></a><pre>
+@inproceedings{<a href="publication-accepted.html#karunakaran2019multitasking">karunakaran2019multitasking</a>,
+  title = {Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows},
+  author = {Karunakaran, Deepak and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of IEEE Symposium Series on Computational Intelligence (SSCI)},
+  pages = {},
+  year = {2019},
+  month = {sep},
+  organization = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="masood2019genetic"></a><pre>
+@inproceedings{<a href="publication-accepted.html#masood2019genetic">masood2019genetic</a>,
+  title = {Genetic Programming with Pareto Local Search for Many-Objective Job Shop Scheduling},
+  author = {Masood, Atiya and Chen, Gang and Mei, Yi and Al-Sahaf, Harith and Zhang, Mengjie},
+  booktitle = {Proceedings of the Australasian Joint Conference on Artificial Intelligence (AI)},
+  pages = {},
+  year = {2019},
+  month = {sep},
+  organization = {Springer},
+  doi = {}
+}
+</pre>
+
+<a name="ardeh2019novel"></a><pre>
 @inproceedings{<a href="publication-accepted.html#ardeh2019novel">ardeh2019novel</a>,
   title = {A Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing},
   author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
