--- a/publication/ardeh-2019-novel/index.html
+++ b/publication/ardeh-2019-novel/index.html
@@ -570,6 +570,18 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/ahd/">
+    Project
+  </a>
+  
+
 
 
 
