--- a/publication/index.html
+++ b/publication/index.html
@@ -1372,6 +1372,18 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
 
 
 
@@ -1468,6 +1480,12 @@
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
 
 
 
