--- a/publication/index.html
+++ b/publication/index.html
@@ -866,6 +866,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/karunakaran-2019-multitasking/karunakaran-2019-multitasking.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
