--- a/index.html
+++ b/index.html
@@ -2412,6 +2412,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/karunakaran-2019-multitasking/karunakaran-2019-multitasking.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
