--- a/publication/karunakaran-2019-multitasking/index.html
+++ b/publication/karunakaran-2019-multitasking/index.html
@@ -533,6 +533,8 @@
 
 
 
+  
+
 
 
 
@@ -552,6 +554,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/karunakaran-2019-multitasking/karunakaran-2019-multitasking.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
