--- a/supervision/index.html
+++ b/supervision/index.html
@@ -532,6 +532,7 @@ Grouping Constrained Storage Location Assignment Problem&rdquo; <a href="https:/
 <li><em><strong>Boxiong Tan</strong> (Victoria University of Wellington, graduated in 2016): &ldquo;Evolutionary Computation for Service Location Allocation&rdquo; (with Dr Hui Ma)</em></li>
 <li><em><strong>Youhan Xia</strong> (University of Melbourne, Australia, graduated in 2017): &ldquo;Ant Colony System for Itinerary Planning with Restaurants&rdquo; (with Dr Jeffrey Chan)</em></li>
 <li><em><strong>Shaolin Wang</strong> (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</em></li>
+<li><em><strong>ManWui Choi</strong> (Victoria University of Wellington, 2019): &ldquo;Evolutionary Computation for Container Loading&rdquo;</em></li>
 </ol>
 
 <h3 id="honours-students">Honours Students</h3>
