--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/10/01, Soheila Sadeghiram, 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Joao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions.">
+  <meta name="description" content="2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Joao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/10/01, Soheila Sadeghiram, 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Joao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition. 2019/08/06, Kirita-Rose Escott, discussions on research directions."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Joao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,8 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2019/10/01, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>,</li>
+<li>2019/10/08, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>,</li>
+<li>2019/10/01, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>, a new memetic algorithm with distance-guided crossover for distributed web service composition.</li>
 <li>2019/09/24, <strong>Whole Group</strong>, how to do research and how to write papers.</li>
 <li>2019/09/17, Sven Hartmann, NP-completeness and NP-hardness.</li>
 <li>2019/09/10, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong>, VRP with drones.</li>
