--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="wang2019two"></a><pre>
+<h1>publication-accepted.bib</h1><a name="huang2019fast"></a><pre>
+@article{<a href="publication-accepted.html#huang2019fast">huang2019fast</a>,
+  title = {A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression},
+  author = {Huang, Zhixing and Zhong, Jinghui and Feng, Liang and Mei, Yi and Cai, Wentong},
+  journal = {Soft Computing},
+  month = {oct},
+  year = {2019},
+  publisher = {Springer},
+  doi = {10.1007/s00500-019-04379-4}
+}
+</pre>
+
+<a name="wang2019two"></a><pre>
 @inproceedings{<a href="publication-accepted.html#wang2019two">wang2019two</a>,
   title = {A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem},
   author = {Wang, Shaolin and Mei, Yi and Park John and Zhang, Mengjie},
