--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/huang-2019-fast/">A fast parallel genetic programming framework with adaptively weighted primitives for symbolic regression</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/wang-2019-two/">A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/karunakaran-2019-multitasking/">Multitasking Genetic Programming for Stochastic Team Orienteering Problem with Time Windows</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/ardeh-2019-novel/">A Novel Genetic Programming Algorithm with Knowledge Transfer for Uncertain Capacitated Arc Routing</a></li>
   </ul>
   
   
