--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2019two">1</a>]
+[<a name="huang2019fast">1</a>]
+</td>
+<td class="bibtexitem">
+Zhixing Huang, Jinghui Zhong, Liang Feng, Yi&nbsp;Mei, and Wentong Cai.
+ A fast parallel genetic programming framework with adaptively
+  weighted primitives for symbolic regression.
+ <em>Soft Computing</em>, oct 2019.
+[&nbsp;<a href="publication-accepted_bib.html#huang2019fast">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1007/s00500-019-04379-4">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="wang2019two">2</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
@@ -35,7 +51,7 @@ Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2019evolving">2</a>]
+[<a name="wang2019evolving">3</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
@@ -52,7 +68,7 @@ Shaolin Wang, Yi&nbsp;Mei, Park John, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="karunakaran2019multitasking">3</a>]
+[<a name="karunakaran2019multitasking">4</a>]
 </td>
 <td class="bibtexitem">
 Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -69,7 +85,7 @@ Deepak Karunakaran, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="masood2019genetic">4</a>]
+[<a name="masood2019genetic">5</a>]
 </td>
 <td class="bibtexitem">
 Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
