--- a/index.html
+++ b/index.html
@@ -2185,6 +2185,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/wang-2019-two/wang-2019-two.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2303,6 +2307,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/wang-2019-evolving/wang-2019-evolving.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
