--- a/publication/index.html
+++ b/publication/index.html
@@ -1179,6 +1179,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/wang-2019-evolving/wang-2019-evolving.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1274,6 +1278,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/wang-2019-two/wang-2019-two.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
