--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Joao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition.">
+  <meta name="description" content="2019/11/05, 3-minutes presentation practice, 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness. 2019/09/10, Joao Costa, VRP with drones. 2019/09/03, Victoria Huang, internet congestion control by deep reinforcement learning. 2019/08/27, Tao Shi, 2019/08/20, Yahui Jia, ant colony optimisation for network flow scheduling. 2019/08/13, Chen Wang, EDA-based local search in NSGA-II for solving multi-objective semantic web service composition."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/11/05, 3-minutes presentation practice, 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,6 +503,10 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
+<li>2019/11/05, 3-minutes presentation practice,</li>
+<li>2019/10/29, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong></li>
+<li>2019/10/22, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Yahui Jia</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong></li>
+<li>2019/10/15, Rhaz Solomon, GP with NEAT for bloat control.</li>
 <li>2019/10/08, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>,</li>
 <li>2019/10/01, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>, a new memetic algorithm with distance-guided crossover for distributed web service composition.</li>
 <li>2019/09/24, <strong>Whole Group</strong>, how to do research and how to write papers.</li>
