--- a/ecco/index.html
+++ b/ecco/index.html
@@ -540,7 +540,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></li>
-<li>Shaolin Wang</li>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></li>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
 
@@ -563,7 +563,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <h2 id="visitors">Visitors</h2>
 
 <ul>
-<li>2019/09/10&ndash;2019/09/xx, Sven Hartmann, Clausthal University, Austria.</li>
+<li>2019/09/10&ndash;2019/09/21, Sven Hartmann, Clausthal University, Austria.</li>
 <li>2019/06/15&ndash;2019/06/21, <strong><a href="https://www.wbs.ac.uk/about/person/juergen-branke/">Prof Juergen Branke</a></strong>, Professor of Operational Research, The University of Warwick, UK.</li>
 <li>2018/11/20, <strong><a href="https://www.rmit.edu.au/contact/staff-contacts/academic-staff/s/song-dr-andy">Dr Andy Song</a></strong>, Senior Lecturer, RMIT University, Australia.</li>
 <li>2018/04/27&ndash;2018/05/12, <strong><a href="https://www.wbs.ac.uk/about/person/juergen-branke/">Prof Juergen Branke</a></strong>, Professor of Operational Research, The University of Warwick, UK.</li>
