--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/11/05, 3-minutes presentation practice, 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness.">
+  <meta name="description" content="2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/11/05, 3-minutes presentation practice, 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers. 2019/09/17, Sven Hartmann, NP-completeness and NP-hardness."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,7 +503,7 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2019/11/05, 3-minutes presentation practice,</li>
+<li>2019/11/05, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong></li>
 <li>2019/10/29, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong></li>
 <li>2019/10/22, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Yahui Jia</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong></li>
 <li>2019/10/15, Rhaz Solomon, GP with NEAT for bloat control.</li>
@@ -523,7 +523,7 @@
 <li>2019/07/09, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, practice on PRICAI presentation.</li>
 <li>2019/07/09, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, practice on PRICAI presentation.</li>
 <li>2019/07/02, <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong>, practice on GECCO 2019 presentation.</li>
-<li>2019/07/02, Shaolin Wang, practice on GECCO 2019 presentation.</li>
+<li>2019/07/02, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, practice on GECCO 2019 presentation.</li>
 <li>2019/06/25, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, practice on PhD proposal seminar.</li>
 <li>2019/06/18, <strong><a href="https://www.wbs.ac.uk/about/person/juergen-branke/">Prof Juergen Branke</a></strong>, <strong>Seminar</strong>: surrogate-assisted optimisation.</li>
 <li>2019/06/03, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, discuss recent work on feature selection with GP.</li>
