--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers.">
+  <meta name="description" content="2010/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem. 2019/11/12, Whole Group, how to do literature review and write literature review. 2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control. 2019/10/08, Mahdi Abdollahi, 2019/10/01, Soheila Sadeghiram, a new memetic algorithm with distance-guided crossover for distributed web service composition. 2019/09/24, Whole Group, how to do research and how to write papers."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2010/11/26, Whole Group, how to write good PhD thesis. 2019/11/19, Shaolin Wang, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem. 2019/11/12, Whole Group, how to do literature review and write literature review. 2019/11/05, 3-minutes presentation practice, Tao Shi, Chen Wang, Shaolin Wang 2019/10/29, 3-minutes presentation practice, Kirita-Rose Escott, Soheila Sadeghiram, Mazhar Anzari Ardeh, Joao Costa 2019/10/22, 3-minutes presentation practice, Yahui Jia, Mahdi Abdollahi, Fangfang Zhang, Boxiong Tan 2019/10/15, Rhaz Solomon, GP with NEAT for bloat control."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,6 +503,9 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
+<li>2010/11/26, <strong>Whole Group</strong>, how to write good PhD thesis.</li>
+<li>2019/11/19, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, ensemble learning with genetic programming hyper-heuristic for uncertain arc routing problem.</li>
+<li>2019/11/12, <strong>Whole Group</strong>, how to do literature review and write literature review.</li>
 <li>2019/11/05, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong></li>
 <li>2019/10/29, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></strong></li>
 <li>2019/10/22, 3-minutes presentation practice, <strong><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Yahui Jia</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></strong></li>
