--- a/index.html
+++ b/index.html
@@ -2761,7 +2761,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="conference-organisation">Conference Organisation</h3>
 
 <ul>
-<li><strong>Co-Chair</strong>, <a href="http://ssci2019.org/esco">IEEE Symposium on Evolutionary Scheduling and Combinatorial Optimisation</a>, in IEEE SSCI <a href="http://ssci2019.org">2019</a></li>
+<li><strong>Co-Chair</strong>, <a href="http://ssci2019.org/esco.html">IEEE Symposium on Evolutionary Scheduling and Combinatorial Optimisation</a>, in IEEE SSCI <a href="http://ssci2019.org">2019</a></li>
 <li><strong>Proceedings Chair</strong>, IEEE Congress on Evolutionary Computation (CEC) <a href="www.cec2019.org">2019</a></li>
 <li><strong>Tutorial Co-chair</strong>, Pacific Rim International Conferences on Artificial Intelligence (PRICAI) <a href="https://www.pricai.org/2019/">2019</a></li>
 <li><strong>Sponsorship Chair</strong>, Australasian Joint Conference on Artificial Intelligence <a href="https://ecs.victoria.ac.nz/Events/AI2018/">2018</a></li>
