--- a/index.html
+++ b/index.html
@@ -2646,7 +2646,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <ul>
 <li><a href="http://www.victoria.ac.nz/courses/comp/261/2019/offering?crn=18314">Algorithms and Data Structures (COMP261)</a> <strong>[Course Coordinator]</strong></li>
 <li><a href="http://www.victoria.ac.nz/courses/comp/307/2019/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
-<li><a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></li>
+<li><a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a> <strong>[Acting Course Coordinator]</strong></li>
 </ul>
 
 <h3 id="2018">2018</h3>
