--- a/index.html
+++ b/index.html
@@ -2078,6 +2078,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1162/evco_a_00267" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
