--- a/publication/maclachlan-2019-genetic/index.html
+++ b/publication/maclachlan-2019-genetic/index.html
@@ -585,6 +585,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1162/evco_a_00267" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
