--- a/cec2020-esco/index.html
+++ b/cec2020-esco/index.html
@@ -28,8 +28,7 @@
   
     
   
-  <meta name="description" content="Introduction Evolutionary Computation for Combinatorial Optimisation (ECCO) Group is a sub-group under the Evolutionary Computation Research Group in Victoria University of Wellington, New Zealand. The group has a wide range of research interests and projects in solving combinatorial optimisation problems using evolutionary computation, including evolutionary vehicle/arc routing, job shop scheduling, cloud resource allocation, Web service composition.
-People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optimisation, Hyper-heuristics, Genetic Programming, Dynamic Optimisation, Large-Scale Optimisation Prof.">
+  <meta name="description" content="Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives. With the growth of new technologies and business models, researchers in this field have to continuously face new challenges, which required innovated solution methods.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/cec2020-esco/">
@@ -121,8 +120,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/cec2020-esco/">
   <meta property="og:title" content="Special Session: Evolutionary Scheduling and Combinatorial Optimization | Yi Mei @ VUW">
-  <meta property="og:description" content="Introduction Evolutionary Computation for Combinatorial Optimisation (ECCO) Group is a sub-group under the Evolutionary Computation Research Group in Victoria University of Wellington, New Zealand. The group has a wide range of research interests and projects in solving combinatorial optimisation problems using evolutionary computation, including evolutionary vehicle/arc routing, job shop scheduling, cloud resource allocation, Web service composition.
-People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optimisation, Hyper-heuristics, Genetic Programming, Dynamic Optimisation, Large-Scale Optimisation Prof."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="Overview Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives. With the growth of new technologies and business models, researchers in this field have to continuously face new challenges, which required innovated solution methods."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -409,7 +407,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
   <h1 itemprop="name">Special Session: Evolutionary Scheduling and Combinatorial Optimization</h1>
 
   
-  <p class="page-subtitle">The IEEE Congress on Evolutionary Computation (CEC) 2020</p>
+  <p class="page-subtitle">The IEEE World Congress on Computational Intelligence (WCCI) 2020</p>
   
 
   
@@ -508,11 +506,65 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
     <div class="article-style" itemprop="articleBody">
       
 
-<h2 id="introduction">Introduction</h2>
+<h2 id="overview">Overview</h2>
 
-<p>Evolutionary Computation for Combinatorial Optimisation (ECCO) Group is a sub-group under the <a href="https://ecs.victoria.ac.nz/Groups/ECRG/">Evolutionary Computation Research Group</a> in Victoria University of Wellington, New Zealand. The group has a wide range of research interests and projects in solving combinatorial optimisation problems using evolutionary computation, including evolutionary vehicle/arc routing, job shop scheduling, cloud resource allocation, Web service composition.</p>
+<p>Evolutionary scheduling and combinatorial optimization (ESCO) is an important research area at the interface of artificial intelligence (AI) and operations research (OR). ESCO has attracted the attentions of researchers over the years due to its applicability and interesting computational aspects. Evolutionary Computation (EC) techniques are suitable for these problems since they are highly flexible regarding handling constraints, dynamic changes, and multiple conflicting objectives. With the growth of new technologies and business models, researchers in this field have to continuously face new challenges, which required innovated solution methods.</p>
 
-<h2 id="people">People</h2>
+<h2 id="scope-and-topics">Scope and Topics</h2>
+
+<p>This special session focuses on both practical and theoretical aspects of Evolutionary Scheduling and Combinatorial Optimization. Examples of evolutionary methods include genetic algorithm, genetic programming, evolutionary strategies, ant colony optimization, particle swarm optimization, evolutionary based hyper-heuristics, memetic algorithms. Novel hybrid approaches that combine machine learning and evolutionary computation to solve difficult ESCO problems are highly encouraged. Examples include using machine learning to improve surrogate-assisted evolutionary algorithms, and designing evolutionary algorithms for reinforcement learning and transfer learning.</p>
+
+<p>We welcome the submissions of quality papers that effectively use the power of EC techniques to solve hard and practical scheduling and combinatorial optimization problems. Papers with rigorous analyses of EC techniques and innovative solutions to handle challenging issues in scheduling and combinatorial optimisation problems are also highly encouraged.</p>
+
+<p><strong>Topics of interest include, but not limited to:</strong>
+- Production scheduling
+- Timetabling
+- Vehicle routing
+- Project scheduling
+- Transport scheduling
+- Airport runway scheduling
+- Grid/cloud scheduling
+- Evolutionary scheduling with big data
+- Web service composition
+- SDN scheduling
+- 2D/3D strip packing
+- Resource allocation
+- Multi-objective scheduling
+- Complex combinatorial optimization with interdependent components
+- Automated heuristic design for combinatorial optimization
+- Dynamic combinatorial optimization
+- Innovative applications of evolutionary scheduling and combinatorial optimization</p>
+
+<h2 id="submission-guideline">Submission Guideline</h2>
+
+<p>Please follow the submission guideline from the <a href="http://www.wcci2020.org/">IEEE WCCI 2020</a> Submission Website. Special session papers are treated the same as regular conference papers. Please specify that your paper is for the <strong>Special Session on Evolutionary Scheduling and Combinatorial Optimisation</strong>. All papers accepted and presented at WCCI(CEC) 2020 will be included in the conference proceedings published by IEEE Explore, which are typically indexed by EI.</p>
+
+<h2 id="important-dates">Important Dates</h2>
+
+<ul>
+<li><strong>15 Jan 2020</strong>: Paper Submission Deadline</li>
+<li><strong>15 Mar 2020</strong>: Paper Acceptance Notification</li>
+<li><strong>15 Apr 2020</strong>: Final Paper Submission &amp; Early Registration Deadline</li>
+<li><strong>19-24 Jul 2020</strong>: Conference Date</li>
+</ul>
+
+<h2 id="special-session-organizers">Special Session Organizers</h2>
+
+<p><strong>Dr. Su Nguyen, La Trobe University, Australia (p.nguyen4@latrobe.edu.au)</strong></p>
+
+<p>Dr. Su Nguyen is a David Myers Research Fellow attached to the Centre for Research in Data Analytics and Cognition, La Trobe University, Australia. He has taken different research positions focusing on quantitative methods for operations management. He was a Research Associate in Industrial and Manufacturing Engineering at the School of Engineering and Technology, AIT from 2009 to 2010 and the Research Assistant at VUW from 2011 to 2013. He was a postdoctoral research fellow at VUW from 2013 to 2016, focusing on automated design of production scheduling heuristics. From 2014 to 2016, he was also the lecturer at International University, VNU-HCMC and Hoa Sen University in Vietnam.</p>
+
+<p>His primary research interests include computational intelligence, optimization, data analytics, large-scale simulation, and their applications in operations management. His current research is focusing on cognitive planning and scheduling, which attempts to combine the power of advanced machine learning and optimisation methods to improve the efficiency of service and logistics systems. His works have been published in top peer-reviewed journals in evolutionary computation and operations research. Su Nguyen is currently a member of IEEE and IEEE Computational Intelligence Society and the Chair of IEEE Task Force on Evolutionary Scheduling and Combinatorial Optimization. He is also in the editorial board of Complex and Intelligent Systems and the guest editor of special issue on “Automated Design and Adaption of Heuristics for Scheduling and Combinatorial Optimization”, to be published in Genetic Programming and Evolvable Machines. He is also the reviewer of high-quality journals in evolutionary computation, operations research, and production/transportation research.</p>
+
+<p><strong>Dr. Yi Mei, Victoria University of Wellington, New Zealand (yi.mei@ecs.vuw.ac.nz)</strong></p>
+
+<p>Dr. Yi Mei is a Lecturer at the School of Engineering and Computer Science, Victoria University of Wellington, Wellington, New Zealand. He received his BSc and PhD degrees from University of Science and Technology of China in 2005 and 2010, respectively. His research interests include evolutionary computation in scheduling, routing and combinatorial optimisation, as well as evolutionary machine learning, genetic programming, feature selection and dimensional reduction. He has more than 50 fully referred publications, including the top journals in EC and Operations Research (OR) such as IEEE TEVC, IEEE Transactions on Cybernetics, European Journal of Operational Research, ACM Transactions on Mathematical Software. He is an Editorial Board Member of International Journal of Bio-Inspired Computation. He currently serves as a Vice-Chair of the IEEE CIS Emergent Technologies Technical Committee, and a member of three IEEE CIS Task Forces. He is a guest editor of a special issue of the Genetic Programming Evolvable Machine journal. He serves as a reviewer of over 25 international journals including the top journals in EC and OR.</p>
+
+<p><strong>Dr. Gang (Aaron) Chen, Victoria University of Wellington, New Zealand (aaron.chen@ecs.vuw.ac.nz)</strong></p>
+
+<p>Dr Gang (Aaron) Chen is currently a senior lecturer in the School of Engineering and Computer Science at Victoria University of Wellington (VUW). He is also co-leading the strategic research direction on Evolutionary Scheduling and Combinatorial Optimization of the Evolutionary Computation Research Group at VUW. In the past, he worked as lecturer at Unitec Institute of Technology in New Zealand from 2010 to 2013 and visiting assistant professor in the School of Electrical and Electronic Engineering at Nanyang Technological University in Singapore from 2007 to 2010.</p>
+
+<p>His primary research interests include reinforcement learning and learning classifier systems, evolutionary computation for job shop scheduling and combinatorial optimization, and multi-agent and peer-to-peer systems. His works have been published in top peer-reviewed journals, including IEEE and ACM Transactions, in the area of machine learning, evolutionary computation, and distributed computing. Gang Chen is currently a member of IEEE and IEEE Computational Intelligence Society. He served as the guest editor of a special issue on &ldquo;Evolutionary Optimisation, Feature Reduction and Learning&rdquo; in the Soft Computing journal. In the recent years he was involved in the technical committees of various conferences in the area of artificial intelligence and evolutionary computation. He is also the reviewer of high-quality journals in the research field of evolutionary computation, machine learning, and distributed computing.</p>
 
 <h4 id="staff-members">Staff Members</h4>
 
